Browser listeners and reporting